/*
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (7.17.0).
 * https://openapi-generator.tech
 * Do not edit the class manually.
 */
package org.geoserver.acl.webapi.v1.server;

import io.swagger.v3.oas.annotations.Operation;
import io.swagger.v3.oas.annotations.Parameter;
import io.swagger.v3.oas.annotations.media.ArraySchema;
import io.swagger.v3.oas.annotations.media.Content;
import io.swagger.v3.oas.annotations.media.Schema;
import io.swagger.v3.oas.annotations.responses.ApiResponse;
import io.swagger.v3.oas.annotations.security.SecurityRequirement;
import io.swagger.v3.oas.annotations.tags.Tag;
import jakarta.annotation.Generated;
import jakarta.validation.Valid;
import jakarta.validation.constraints.*;
import java.util.List;
import org.geoserver.acl.webapi.v1.model.AccessInfo;
import org.geoserver.acl.webapi.v1.model.AccessRequest;
import org.geoserver.acl.webapi.v1.model.AccessSummary;
import org.geoserver.acl.webapi.v1.model.AccessSummaryRequest;
import org.geoserver.acl.webapi.v1.model.AdminAccessInfo;
import org.geoserver.acl.webapi.v1.model.AdminAccessRequest;
import org.geoserver.acl.webapi.v1.model.Rule;
import org.springframework.http.ResponseEntity;
import org.springframework.validation.annotation.Validated;
import org.springframework.web.bind.annotation.*;

@Generated(
        value = "org.openapitools.codegen.languages.SpringCodegen",
        date = "2026-01-29T18:51:14.805992-03:00[America/Argentina/Cordoba]",
        comments = "Generator version: 7.17.0")
@Validated
@Tag(
        name = "Authorization",
        description =
                "Evaluate access rules for specific requests. These endpoints determine what permissions a user has for a given resource or operation by matching and applying the configured rules. ")
public interface AuthorizationApi {

    default AuthorizationApiDelegate getDelegate() {
        return new AuthorizationApiDelegate() {};
    }

    String PATH_GET_ACCESS_INFO = "/authorization/resources";
    /**
     * POST /authorization/resources : Evaluate resource access permissions
     * Evaluates the data access rules for a specific request and returns the compiled access permissions. The response indicates whether access is granted, denied, or limited, along with any applicable restrictions such as spatial filters, CQL filters, allowed styles, and attribute-level permissions. Rules are evaluated in priority order until a matching rule determines the final access decision.
     *
     * @param accessRequest  (required)
     * @return The result of evaluating access rules for a resource request. This response contains the final access decision (ALLOW, DENY, or LIMIT) along with any applicable restrictions such as spatial filters, CQL filters, allowed styles, and attribute-level permissions. Includes a list of rule IDs that were applied to reach this decision.  (status code 200)
     */
    @Operation(
            operationId = "getAccessInfo",
            summary = "Evaluate resource access permissions",
            description =
                    "Evaluates the data access rules for a specific request and returns the compiled access permissions. The response indicates whether access is granted, denied, or limited, along with any applicable restrictions such as spatial filters, CQL filters, allowed styles, and attribute-level permissions. Rules are evaluated in priority order until a matching rule determines the final access decision. ",
            tags = {"Authorization"},
            responses = {
                @ApiResponse(
                        responseCode = "200",
                        description =
                                "The result of evaluating access rules for a resource request. This response contains the final access decision (ALLOW, DENY, or LIMIT) along with any applicable restrictions such as spatial filters, CQL filters, allowed styles, and attribute-level permissions. Includes a list of rule IDs that were applied to reach this decision. ",
                        content = {
                            @Content(
                                    mediaType = "application/json",
                                    schema = @Schema(implementation = AccessInfo.class)),
                            @Content(
                                    mediaType = "application/x-jackson-smile",
                                    schema = @Schema(implementation = AccessInfo.class))
                        })
            },
            security = {@SecurityRequirement(name = "basicAuth")})
    @RequestMapping(
            method = RequestMethod.POST,
            value = AuthorizationApi.PATH_GET_ACCESS_INFO,
            produces = {"application/json", "application/x-jackson-smile"},
            consumes = {"application/json", "application/x-jackson-smile"})
    default ResponseEntity<AccessInfo> getAccessInfo(
            @Parameter(name = "AccessRequest", description = "", required = true) @Valid @RequestBody
                    AccessRequest accessRequest) {
        return getDelegate().getAccessInfo(accessRequest);
    }

    String PATH_GET_ADMIN_AUTHORIZATION = "/authorization/admin";
    /**
     * POST /authorization/admin : Evaluate workspace administration access
     * Determines whether a user has administrative privileges on a specific workspace by evaluating the configured admin rules. Returns admin access information including whether the user has full administrative rights or only user-level access to the workspace.
     *
     * @param adminAccessRequest  (required)
     * @return The result of evaluating admin rules for workspace access. Indicates whether the user has administrative privileges on the requested workspace and includes the ID of the matching admin rule.  (status code 200)
     */
    @Operation(
            operationId = "getAdminAuthorization",
            summary = "Evaluate workspace administration access",
            description =
                    "Determines whether a user has administrative privileges on a specific workspace by evaluating the configured admin rules. Returns admin access information including whether the user has full administrative rights or only user-level access to the workspace. ",
            tags = {"Authorization"},
            responses = {
                @ApiResponse(
                        responseCode = "200",
                        description =
                                "The result of evaluating admin rules for workspace access. Indicates whether the user has administrative privileges on the requested workspace and includes the ID of the matching admin rule. ",
                        content = {
                            @Content(
                                    mediaType = "application/json",
                                    schema = @Schema(implementation = AdminAccessInfo.class)),
                            @Content(
                                    mediaType = "application/x-jackson-smile",
                                    schema = @Schema(implementation = AdminAccessInfo.class))
                        })
            },
            security = {@SecurityRequirement(name = "basicAuth")})
    @RequestMapping(
            method = RequestMethod.POST,
            value = AuthorizationApi.PATH_GET_ADMIN_AUTHORIZATION,
            produces = {"application/json", "application/x-jackson-smile"},
            consumes = {"application/json", "application/x-jackson-smile"})
    default ResponseEntity<AdminAccessInfo> getAdminAuthorization(
            @Parameter(name = "AdminAccessRequest", description = "", required = true) @Valid @RequestBody
                    AdminAccessRequest adminAccessRequest) {
        return getDelegate().getAdminAuthorization(adminAccessRequest);
    }

    String PATH_GET_MATCHING_RULES = "/authorization/resources/matchingrules";
    /**
     * POST /authorization/resources/matchingrules : Get rules that match an access request
     * Returns the list of data rules that match and would be applied when evaluating the given access request. This is useful for debugging and understanding which rules affect a particular request. Rules are returned in the order they would be evaluated (by priority).
     *
     * @param accessRequest  (required)
     * @return A paginated list of data access rules matching the query criteria. Rules are returned in priority order (lowest priority number first). If more rules exist beyond this page, check the X-ACL-NEXTCURSOR header to fetch the next page. An empty array indicates no rules match or you&#39;ve reached the end of results.  (status code 200)
     */
    @Operation(
            operationId = "getMatchingRules",
            summary = "Get rules that match an access request",
            description =
                    "Returns the list of data rules that match and would be applied when evaluating the given access request. This is useful for debugging and understanding which rules affect a particular request. Rules are returned in the order they would be evaluated (by priority). ",
            tags = {"Authorization"},
            responses = {
                @ApiResponse(
                        responseCode = "200",
                        description =
                                "A paginated list of data access rules matching the query criteria. Rules are returned in priority order (lowest priority number first). If more rules exist beyond this page, check the X-ACL-NEXTCURSOR header to fetch the next page. An empty array indicates no rules match or you've reached the end of results. ",
                        content = {
                            @Content(
                                    mediaType = "application/json",
                                    array = @ArraySchema(schema = @Schema(implementation = Rule.class))),
                            @Content(
                                    mediaType = "application/x-jackson-smile",
                                    array = @ArraySchema(schema = @Schema(implementation = Rule.class)))
                        })
            },
            security = {@SecurityRequirement(name = "basicAuth")})
    @RequestMapping(
            method = RequestMethod.POST,
            value = AuthorizationApi.PATH_GET_MATCHING_RULES,
            produces = {"application/json", "application/x-jackson-smile"},
            consumes = {"application/json", "application/x-jackson-smile"})
    default ResponseEntity<List<Rule>> getMatchingRules(
            @Parameter(name = "AccessRequest", description = "", required = true) @Valid @RequestBody
                    AccessRequest accessRequest) {
        return getDelegate().getMatchingRules(accessRequest);
    }

    String PATH_GET_USER_ACCESS_SUMMARY = "/authorization/accesssummary";
    /**
     * POST /authorization/accesssummary : Get user access summary across workspaces
     * Provides a comprehensive summary of what resources a user can access across all workspaces. For each workspace, returns the admin access level and lists of allowed and forbidden layers. This is useful for building user interfaces that need to display what resources are available to a particular user.
     *
     * @param accessSummaryRequest  (required)
     * @return The list of per-workspace access summary for a user (status code 200)
     */
    @Operation(
            operationId = "getUserAccessSummary",
            summary = "Get user access summary across workspaces",
            description =
                    "Provides a comprehensive summary of what resources a user can access across all workspaces. For each workspace, returns the admin access level and lists of allowed and forbidden layers. This is useful for building user interfaces that need to display what resources are available to a particular user. ",
            tags = {"Authorization"},
            responses = {
                @ApiResponse(
                        responseCode = "200",
                        description = "The list of per-workspace access summary for a user",
                        content = {
                            @Content(
                                    mediaType = "application/json",
                                    schema = @Schema(implementation = AccessSummary.class)),
                            @Content(
                                    mediaType = "application/x-jackson-smile",
                                    schema = @Schema(implementation = AccessSummary.class))
                        })
            },
            security = {@SecurityRequirement(name = "basicAuth")})
    @RequestMapping(
            method = RequestMethod.POST,
            value = AuthorizationApi.PATH_GET_USER_ACCESS_SUMMARY,
            produces = {"application/json", "application/x-jackson-smile"},
            consumes = {"application/json", "application/x-jackson-smile"})
    default ResponseEntity<AccessSummary> getUserAccessSummary(
            @Parameter(name = "AccessSummaryRequest", description = "", required = true) @Valid @RequestBody
                    AccessSummaryRequest accessSummaryRequest) {
        return getDelegate().getUserAccessSummary(accessSummaryRequest);
    }
}
